[tool.poetry]
name = "data-science-template"
version = "0.1.0"
description = "A template for data science projects."
authors = ["Yonglin Zhu"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
pandas = "^1.5"
scikit-learn = "^1.1"

[tool.poetry.dev-dependencies]
black = "^23.3"
pytest = "^7.4"
mypy = "^1.5"
